# ffmpeg_video

./: build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/fmodexample/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ffplay.c  native-lib.cpp
app/src/main/cpp/include/player/: VideoPlayerCallback.h  VideoPlayerImpl.h  VideoPlayerState.h
app/src/main/cpp/include/player/channel/: AudioChannel.h  BaseChannel.h  VideoChannel.h
app/src/main/cpp/include/utils/: AVFrameQueue.h  AVPacketQueue.h  LogUtil.h  release_util.h
app/src/main/cpp/src/: AudioChannel.cpp  BaseChannel.cpp  VideoChannel.cpp  VideoPlayerImpl.cpp
app/src/main/java/com/example/video/: MainActivity.java  MainActivity2.java  VideoImpl.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/fmodexample/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
